# splatreg

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RESULTS.md  _verify_phase3.py  _verify_sim3.py  index.html  main.aux  main.bcf  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  test.yml
api/: index.html
assets/: ICON_BRIEF.md
benchmarks/: SCANNET_GSREG.md  bundle_real_bench.py  camera_loc_real_bench.py  icp_baseline_bench.py  index.html  object_pose_bench.py  object_pose_real_bench.py  partial_fix_experiment.py  partial_fix_experiment2.py  photometric_refine_bench.py  photometric_refine_results.md  realdata_bench.py  robustness_bench.py  scannet_gsreg_bench.py  sdf_speed_experiment.py  speed_bench.py  splat_competitors_bench.py  threedmatch_bench.py  threedmatch_official_bench.py  tracking_speed_bench.py  ycb_object_pose_bench.py
cli/: index.html
docs/: 00_research_synthesis.md  01_step0_findings.md  02_mvp_spec.md  03_failure_analysis.md  04_validation_roadmap.md  BUFFERX_BUILD_MODERN_CUDA.md  DEPLOY_DOCS.md  RELEASING.md
docs_site/: api.md  benchmarks.md  cli.md  index.md  init-modes.md  photometric.md  ply-interop.md  quickstart.md
docs_site/stylesheets/: extra.css
examples/: _example_utils.py  make_bufferx_figure.py  make_lowoverlap_gif.py  make_merge_fusion_gif.py  make_photometric_refine_gif.py  make_pipeline_diagram.py  make_readme_figure.py  make_sh_rotation_figure.py  merge_demo.py  splatreg_quickstart.ipynb  validate_recovery.py
init-modes/: index.html
photometric/: index.html
ply-interop/: index.html
quickstart/: index.html
search/: search_index.json
splatreg/: __init__.py  align.py  align_features.py  api.py  bundle.py  camera_loc.py  cli.py  fuse.py  io.py  mac.py  object_pose.py  quality.py  sh.py  spatial_index.py  testing.py  track.py
splatreg/core/: __init__.py  lie.py  types.py
splatreg/geometry/: __init__.py  gaussian_sdf.py
splatreg/residuals/: __init__.py  base.py  icp.py  photometric.py  prior.py  sdf.py
splatreg/solvers/: __init__.py  _backend_common.py  base.py  lm.py  pypose_backend.py  theseus_backend.py
tests/: conftest.py  test_backends.py  test_bufferx_seedgate.py  test_bundle.py  test_camera_loc.py  test_camera_loc_coarse.py  test_cli.py  test_icp_memory.py  test_io_roundtrip_dc.py  test_jacobians.py  test_lie.py  test_mac.py  test_object_pose.py  test_photometric_refine.py  test_pose_covariance.py  test_recovery.py  test_sh_rotation.py  test_solver.py  test_spatial_index.py  test_validate_recovery_fast.py  test_weighting_and_fusion_fixes.py
