[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splatreg"
version = "1.2.0"
description = "Composable geometry-first SE(3)/Sim(3) registration for 3D Gaussian Splatting — the inverse of gsplat."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Krishi Attri" }]
keywords = ["gaussian-splatting", "3dgs", "registration", "pose-estimation", "se3", "sim3", "gsplat"]
dependencies = ["torch", "numpy"]

[project.urls]
Homepage = "https://github.com/Archerkattri/splatreg"
Repository = "https://github.com/Archerkattri/splatreg"
Issues = "https://github.com/Archerkattri/splatreg/issues"

[project.scripts]
splatreg = "splatreg.cli:main"

[project.optional-dependencies]
render = ["gsplat>=1.4"]          # the Photometric residual + splatreg.render
pypose = ["pypose"]               # solver backend
theseus = ["theseus-ai"]          # differentiable solver backend
gtsam = ["gtsam"]                 # factor-graph backend (needs analytic Jacobians)
dev = [
    "pytest>=7.0",
    "pytest-xdist",
    "black>=24.0",
    "mypy>=1.5",
    "isort>=5.12",
    "flake8>=6.0",
    "ruff",
    "hypothesis",
]
test = [
    "pytest>=7.0",
    "pytest-xdist",
    "black>=24.0",
    "mypy>=1.5",
    "isort>=5.12",
    "flake8>=6.0",
    "ruff",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
all = ["gsplat>=1.4", "pypose", "theseus-ai"]

[tool.setuptools.packages.find]
include = ["splatreg*"]

[tool.setuptools.package-data]
splatreg = ["py.typed"]

[tool.black]
line-length = 110
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# torch stubs are incomplete; suppress **kwargs unpacking noise for as_tensor calls
# and Optional→Tensor variance in the .to() convenience method.
[[tool.mypy.overrides]]
module = "splatreg.io"
ignore_errors = true
[[tool.mypy.overrides]]
module = "splatreg.core.types"
ignore_errors = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
# Default ruff lint set (pyflakes F + pycodestyle E/W). E731 (lambda assignment) and E741
# (ambiguous name `I`) flag intentional, readable code here (the Gaussians.to lambda; the
# identity matrix `I` in the Lie-group invariance tests), so they are silenced project-wide.
ignore = ["E731", "E741"]
